{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 9,
  "lineage": "1705d28f-1e14-717d-614a-ea631a62706d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687568280197:vpc/vpc-0104dd46d71ca5a60",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a33fd4e02d5e9172",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b8c6daa7e8244c54",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0104dd46d71ca5a60",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f2889c11682b458c",
            "owner_id": "687568280197",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b311c1caf21cd16a",
            "arn": "arn:aws:ec2:eu-north-1:687568280197:elastic-ip/eipalloc-0b311c1caf21cd16a",
            "domain": "vpc",
            "id": "eipalloc-0b311c1caf21cd16a",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-16-235-146.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.235.146",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "RustDesk-Server-IP"
            },
            "tags_all": {
              "Name": "RustDesk-Server-IP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01fd6fa49060e89a6",
            "arn": "arn:aws:ec2:eu-north-1:687568280197:instance/i-0bf7fff1aa72d5e6e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf7fff1aa72d5e6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-stockholm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-052813ab05efffb2c"
              }
            ],
            "primary_network_interface_id": "eni-052813ab05efffb2c",
            "private_dns": "ip-172-31-12-204.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.12.204",
            "public_dns": "ec2-13-53-243-228.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.243.228",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd42d9335b269d88",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "ec2-instance-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cdd36237209f4c6",
            "tags": {
              "Name": "RustDesk-App-Server"
            },
            "tags_all": {
              "Name": "RustDesk-App-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a44950e708472119"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "687568280197",
            "id": "i-0bf7fff1aa72d5e6e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_efs_mount_target.efs_mount_target",
            "aws_security_group.ec2_sg",
            "aws_security_group.efs_sg",
            "data.aws_ami.ubuntu",
            "data.aws_efs_file_system.existing_efs",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687568280197:security-group/sg-0a44950e708472119",
            "description": "Allow SSH and Tailscale traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a44950e708472119",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Tailscale NAT traversal",
                "from_port": 41641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 41641
              }
            ],
            "name": "ec2-instance-sg",
            "name_prefix": "",
            "owner_id": "687568280197",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG"
            },
            "tags_all": {
              "Name": "EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104dd46d71ca5a60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "687568280197",
            "id": "sg-0a44950e708472119",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:687568280197:security-group/sg-002733ee39e0a0c62",
            "description": "Allow NFS traffic from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002733ee39e0a0c62",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow NFS from EC2",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a44950e708472119"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs-sg",
            "name_prefix": "",
            "owner_id": "687568280197",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EFS-SG"
            },
            "tags_all": {
              "Name": "EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0104dd46d71ca5a60"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "687568280197",
            "id": "sg-002733ee39e0a0c62",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}